# repc

./: Cargo.toml  README.md
examples/: Cargo.toml
proto/: raft.proto
raftr/: Cargo.toml  build.rs
raftr/examples/: pin.rs  tx.rs
raftr/proto/: kvs.proto
raftr/src/: configuration.rs  deadline_clock.rs  follower.rs  leader.rs  lib.rs  log.rs  message.rs  node.rs  server.rs  service.rs  state.rs  state_machine.rs
raftr/src/group/: grpc.rs  partitioned.rs
raftr/src/node/: base.rs  candidate.rs  error.rs  follower.rs  leader.rs  mod.rs
raftr/src/peer/: partitioned.rs
repc/: Cargo.toml  build.rs
repc-build/: Cargo.toml
repc-build/src/: client.rs  lib.rs  server.rs  util.rs
repc-client/: Cargo.toml
repc-client/src/: client.rs  codegen.rs  error.rs  lib.rs
repc-client/src/client/: mod.rs
repc-client/src/configuration/: error.rs  mod.rs
repc-client/src/session/: encoder.rs  mod.rs
repc-common/: Cargo.toml  build.rs
repc-common/proto/: admin.proto
repc-common/src/: lib.rs  pb.rs  types.rs
repc-common/src/admin/: mod.rs
repc-common/src/metadata/: error.rs  key.rs  mod.rs  request.rs  status.rs
repc-common/src/repc/: metadata.rs  mod.rs
repc-common/src/repc/metadata/: error.rs  request.rs  status.rs
repc-proto/: Cargo.toml  build.rs
repc-proto/proto/: repc.proto
repc-proto/src/: lib.rs
repc-proto/src/repc/: metadata.rs  types.rs
repc/proto/: raft.proto  repc.proto
repc/src/: app.rs  codegen.rs  configuration.rs  lib.rs  service.rs  state.rs  state_machine.rs  types.rs
repc/src/group/: grpc.rs  partitioned.rs
repc/src/group/grpc/: error.rs  mod.rs
repc/src/log/: mod.rs
repc/src/node/: base.rs  follower.rs  mod.rs
repc/src/pb/: mod.rs
repc/src/peer/: error.rs  mod.rs  service.rs
repc/src/raft/: deadline_clock.rs  log.rs  message.rs  mod.rs  service.rs
repc/src/raft/election/: mod.rs  writer.rs
repc/src/raft/node/: base.rs  candidate.rs  deadline_clock.rs  error.rs  follower.rs  leader.rs  mod.rs  node.rs  role.rs  state.rs
repc/src/raft/node/leader/: appender.rs  commit_manager.rs  error.rs  message.rs  mod.rs  replicator.rs
repc/src/raft/peer/: grpc.rs  mod.rs  partitioned.rs  service.rs
repc/src/service/: codec.rs  mod.rs  peer.rs
repc/src/service/admin/: mod.rs
repc/src/service/raft/: mod.rs
repc/src/service/raft/partitioned/: error.rs  message.rs  mod.rs
repc/src/service/repc/: codec.rs  error.rs  mod.rs
repc/src/session/: error.rs  mod.rs
repc/src/state/: command.rs  error.rs  log.rs  mod.rs  rpc_id.rs  state_machine.rs
repc/src/state/log/: in_memory.rs  mod.rs
repc/src/state/session/: error.rs  mod.rs
repc/src/state/state_machine/: mod.rs
repc/src/state_machine/: error.rs  mod.rs
repc/src/test_util/: mod.rs
repc/src/test_util/partitioned/: group.rs  mod.rs
repc/src/test_util/partitioned/service/raft/: error.rs  mod.rs
repc/src/tests/: initial_election.rs  mod.rs  register.rs  send_command.rs
repc/src/tests/app/: mod.rs
repc/src/tests/util/: configuration.rs
repc/src/util/: mod.rs
src/: candidate.rs  deadline_clock.rs  error.rs  follower.rs  heartbeater.rs  leader.rs  lib.rs  log.rs  message.rs  node.rs  peer.rs  replicator.rs  rpc.rs  state.rs  types.rs
src/group/: mod.rs  partitioned.rs
src/peer/: grpc.rs
tests/: Cargo.toml  build.rs
tests/proto/: adder.proto
tests/src/: lib.rs
tests/src/app/: adder.rs
tests/src/test/: election.rs  initial_election.rs  mod.rs  register.rs  send_command.rs
tests/src/util/: configuration.rs  mod.rs
