[package]
name = "repc-client"
version = "0.1.0"
authors = ["Koki Kato <koki.kato1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
repc-proto = { path = "../repc-proto" }
tonic = "0.4"
bytes = "1.0"
prost = "0.7"
http-body = "0.4"