[package]
name = "repc"
version = "0.1.0"
authors = ["Koki Kato <koki.kato1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
repc-proto = { path = "../repc-proto" }
repc-client = { path = "../repc-client" }
tonic = "0.3"
bytes = "0.5"
prost = "0.6"
http = "0.2"
http-body = "0.3"
tokio = { version = "0.2", features = ["macros", "time", "sync", "stream"] }
tower-service = { version = "0.3" }
tower = { version = "0.3" }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
tracing = "0.1"
rand = "0.7"

[build-dependencies]
tonic-build = "0.3"
tokio = { version = "0.2", features = ["macros", "time", "sync", "stream", "test-util"] }
