[package]
name = "repc"
version = "0.1.0"
authors = ["Koki Kato <koki.kato1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
repc-proto = { path = "../repc-proto" }
tonic = "0.4"
bytes = "1.0"
prost = "0.7"
http = "0.2"
http-body = "0.4"
tokio = { version = "1.2", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-service = "0.3"
tower = "0.4"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
tracing = "0.1"
tracing-futures = "0.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.4"