[package]
name = "tests"
version = "0.1.0"
authors = ["Koki Kato <koki.kato1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
repc = { path = "../repc" }
repc-client = { path = "../repc-client" }
repc-proto = { path = "../repc-proto" }
tonic = "0.3"
prost = "0.6"
bytes = "0.5"

[build-dependencies]
repc-build = { path = "../repc-build" }

[dev-dependencies]
tracing-subscriber = "0.2"
tokio = { version = "0.2", features = ["macros", "time", "sync", "stream", "test-util"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }