[package]
name = "tests"
version = "0.1.0"
authors = ["Koki Kato <koki.kato1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
repc = { path = "../repc" }
repc-client = { path = "../repc-client" }
repc-common = { path = "../repc-common" }
tonic = "0.4"
prost = "0.7"
bytes = "1.0"

[build-dependencies]
repc-build = { path = "../repc-build" }

[dev-dependencies]
tracing-subscriber = "0.2"
tokio = { version = "1.2", features = ["rt-multi-thread", "macros", "time", "sync", "test-util"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }